fixed spacing and alignment of widget list save and preview row.

--- a/src/main/webapp/course-editor.style.client.css
+++ b/src/main/webapp/course-editor.style.client.css
@@ -22,3 +22,7 @@ a.nav-link {
     color: white !important;
 
 }
+
+.view-height {
+    height: 100%;
+}
